@@ -1,34 +1,17 @@
+% $Id$
 % htlatex tex4ht-oo-xtpipes "xhtml,next,3" "" "-d./"
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2001--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
     \Configure{ProTex}{log,<<<>>>,title,list,`,[[]]}
     \usepackage{url}
 \begin{document}
 
-
-%%%%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
-
-
+\input{common}
+\input{tex4ht-cpright}
 
 
 %%%%%%%%%%%%%%%%%%
@@ -39,8 +22,6 @@
 %%%%%%%%%%%%%
 \subsection{Math}
 %%%%%%%%%%%%%
-
-
 
 
 \AtEndDocument{\OutputCodE\<oo-math.4xt\>}
@@ -54,6 +35,10 @@
 \<oo-math.4xt\><<<
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
+<!-- oo-math.4xt (`version), generated from `jobname.tex
+     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2006. Eitan M. Gurari
+`<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="oo-math.4xt (`version)">
    <sax content-handler="xtpipes.util.ScriptsManager,tex4ht.OomFilter" 
         lexical-handler="xtpipes.util.ScriptsManagerLH" >
@@ -117,6 +102,10 @@
 \<oo-text.4xt\><<<
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
+<!-- oo-text.4xt (`version), generated from `jobname.tex
+     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2006. Eitan M. Gurari
+`<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="oo-text.4xt (`version)">
    <sax content-handler="xtpipes.util.ScriptsManager,tex4ht.OoFilter" 
         lexical-handler="xtpipes.util.ScriptsManagerLH" >
@@ -298,11 +287,10 @@ above
 
 \<OoUtilities.java\><<<
 package tex4ht;
-`<copy right`>
-/* OoUtilities.java                      `version */
-/* Copyright (C) `CopyYear.2006.    Eitan M. Gurari            */
-`<cont copy right`>
-
+/* OoUtilities.java (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2006. Eitan M. Gurari
+`<TeX4ht copyright`> */
 import org.w3c.dom.*;
 public class OoUtilities {
   `<static void mtable(dom)`>
@@ -1559,10 +1547,10 @@ mtext.
 
 \<OomFilter.java\><<<
 package tex4ht;
-`<copy right`>
-/* OomFilterImpl.java                     `version */
-/* Copyright (C) `CopyYear.2006.    Eitan M. Gurari            */
-`<cont copy right`>
+/* OomFilter.java (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
+`<TeX4ht copyright`> */
 
 import org.xml.sax.helpers.*;
 import org.xml.sax.*;
@@ -1624,10 +1612,10 @@ public class OomFilter extends XMLFilterImpl {
 
 \<OoFilter.java\><<<
 package tex4ht;
-`<copy right`>
-/* OoFilterImpl.java                     `version */
-/* Copyright (C) `CopyYear.2006.    Eitan M. Gurari            */
-`<cont copy right`>
+/* OoFilter.java (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
+`<TeX4ht copyright`> */
 `<OoFilter imports`>
 public class OoFilter extends XMLFilterImpl {
      PrintWriter out = null;
@@ -1951,9 +1939,6 @@ if(  (int) (  Double.parseDouble(match[2])
 
 
 
-
-
-
 \<load font vars\><<<
 int base_font_size = 10;
 int second;
@@ -1971,50 +1956,6 @@ import java.io.FileReader;
 
 
 
-
-%%%%%%%%%%%%%%%%%%
-\section{Copyright}
-%%%%%%%%%%%%%%%%%%
-
-\let\newfilename=\relax
-
-\<copy right\><<< 
-/**********************************************************/ >>>
-
-
-
-\<cont copy right\><<< 
-/*                                                        */
-/* This work may be distributed and/or modified under the */
-/* conditions of the LaTeX Project Public License, either */
-/* version 1.3 of this license or (at your option) any    */
-/* later version. The latest version of this license is   */
-/* in                                                     */
-/*   http://www.latex-project.org/lppl.txt                */
-/* and version 1.3 or later is part of all distributions  */
-/* of LaTeX version 2003/12/01 or later.                  */
-/*                                                        */
-/* This work has the LPPL maintenance status "maintained".*/
-/*                                                        */
-/* This Current Maintainer of this work                   */
-/* is Eitan M. Gurari.                                    */
-/*                                                        */
-/*                             gurari@cse.ohio-state.edu  */
-/*                 http://www.cse.ohio-state.edu/~gurari  */
-/**********************************************************/
->>>
-
-
-% /* If you modify this program your changing its signature */
-% /* with a directive of the following form will be         */
-% /* appreciated.                                           */
-% /*      #define PLATFORM "signature"                      */
-% /*                                                        */
-
-
-
-
-
 \AtEndDocument{\Needs{%
     "cd /home/4/gurari/xtpipes.dir
      ;  
@@ -2026,9 +1967,4 @@ import java.io.FileReader;
         /home/4/gurari/tex4ht.dir/texmf/tex4ht/xtpipes/.
 "}}
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
